--- a/p1.html
+++ b/p1.html
@@ -11,8 +11,17 @@
       background-color: black;
       overflow: hidden;
     }
+    .background-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1; /* Đặt video phía sau nội dung */
+    }
 
-    .heart {
+    /*.heart {
       position: absolute;
       width: 20px;
       height: 20px;
@@ -60,29 +69,34 @@
         transform: translateY(-30px) rotate(-45deg);
         opacity: 0;
       }
-    }
+    }*/
   </style>
 </head>
 <body>
+  <video class="background-video" autoplay muted loop>
+    <source src="Comp2.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
   <script>
-    function createHeart() {
-      const heart = document.createElement('div');
-      heart.classList.add('heart');
+    // function createHeart() {
+    //   const heart = document.createElement('div');
+    //   heart.classList.add('heart');
 
-      const x = Math.random() * window.innerWidth;
-      const y = Math.random() * window.innerHeight;
+    //   const x = Math.random() * window.innerWidth;
+    //   const y = Math.random() * window.innerHeight;
 
-      heart.style.left = `${x}px`;
-      heart.style.top = `${y}px`;
+    //   heart.style.left = `${x}px`;
+    //   heart.style.top = `${y}px`;
 
-      document.body.appendChild(heart);
+    //   document.body.appendChild(heart);
 
-      setTimeout(() => {
-        heart.remove();
-      }, 3000);
-    }
+    //   setTimeout(() => {
+    //     heart.remove();
+    //   }, 3000);
+    // }
 
-    setInterval(createHeart, 100);
+    // setInterval(createHeart, 100);
   </script>
 </body>
 </html>
